z-index fix

--- a/css/alakas-2021.webflow.css
+++ b/css/alakas-2021.webflow.css
@@ -2462,6 +2462,9 @@ a {
   .footer_link:hover {
     background-color: rgba(0, 21, 255, 0);
   }
+  .shape {
+    z-index: -1;
+  }
 }
 
 @media (max-width: 767px) {
